atualizacao aplicação - estruturação

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,25 @@
 /* importando uma fonte ortografica do servidor do goggle */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;400&display=swap');
 
-* { /* definição da estitlização completa na página */
+* {
+    /* definição da estitlização completa na página */
     margin: 0;
     padding: 0;
     box-sizing: 0;
     font-family: 'Work Sans', sans-serif;
 }
 
-.imagem-caixa-pokemon { /* estilização da caixa principal ( comportamento dos elementos sobre a iamgem ) */
+.imagem-caixa-pokemon {
+    /* estilização da caixa principal ( comportamento dos elementos sobre a iamgem ) */
     background-image: url(../assets/tela-principal.jpg);
     height: 150vh;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
 }
-.coloracao-imagem-caixa-pokemon { /* coloração por cima da imagem principal */
+
+.coloracao-imagem-caixa-pokemon {
+    /* coloração por cima da imagem principal */
     background-color: rgba(0, 0, 0, 0.733);
     position: absolute;
     top: 0;
@@ -28,49 +32,59 @@
     align-items: center;
     justify-content: space-between;
 }
+
 /* estilização do audio */
 .audio-pokedex {
     text-align: right;
 }
+
 .audio-pokedex audio {
     color: black;
     width: 150px;
     height: 50px;
     margin: 15px;
 }
+
 /* estilização do cabeçalho da pagina */
-.article-cabecalho-da-pagina { 
+.article-cabecalho-da-pagina {
     position: relative;
     text-align: center;
     margin-top: 70px;
 }
+
 .article-cabecalho-da-pagina figure img {
     position: absolute;
     top: 0;
     width: 200px;
     height: 100px;
 }
+
 .article-cabecalho-da-pagina p {
     font-size: 20px;
 }
+
 .article-cabecalho-da-pagina h2 {
     font-size: 35px;
     color: rgb(255, 255, 0);
 }
+
 /* estilização sobre as regras do jogo */
 .article-regras-do-jogo {
     text-align: center;
     font-size: 25px;
 }
+
 .article-regras-do-jogo p {
     margin-top: 10px;
     margin-bottom: 5px;
 }
+
 /* estilização do botão funcional que levará para outra pagina da aplicação*/
 .article-botao-Iniciar {
     text-align: center;
     margin-bottom: 70px;
 }
+
 .article-botao-Iniciar button {
     background-color: rgba(0, 0, 0, 0.623);
     color: #fff;
@@ -78,6 +92,7 @@
     padding: 25px;
     cursor: pointer;
 }
+
 /* estilização do rodapé da pagina */
 .rodape-pagina {
     background-color: rgba(0, 0, 0, 0.719);
@@ -87,6 +102,7 @@
     padding: 15px;
     flex-wrap: wrap;
 }
+
 .rodape-pagina div {
     margin: 0 auto;
     display: block;
