--- a/css/landing page.css
+++ b/css/landing page.css
@@ -1,38 +1,43 @@
+/* escolhe o 3º caixa article */
 article:nth-child(3) {
-    position: relative;
-    margin: 0 auto;
-    display: block;
+    position: relative; /* position relative para dá um norte do posicionamento a nossa pagina de confirmação*/
+    /* estilo com o intuito de fixar nossa margem-tela de confirmação ao meio */
+    margin: 0 auto; 
+    display: block; 
 }
-
+/* estilização da nossa caixa com as informações da tela de confirmação */
 .landing-page {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.887);
+    position: absolute; /* posição direcionada a relativa determinada anteriormente */
+    /* cores */
+    background-color: rgba(0, 0, 0, 0.887); 
     color: #fff;
+    /* posicionamento */
     padding: 15px;
     top: 0;
-    z-index: 100;
     height: 60vh;
-    display: none;
     width: 50vw;
     text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* hierarquia no posicionamento na tela */
+    z-index: 100;
+    display: none;
 }
-
+/* estilização dos textos h2 dentro da classe landing page */
 .landing-page h2 {
     color: rgb(255, 255, 0);
     margin-top: 10px;
 
 }
-
+/* estilização da caixa dos botões dentro da nossa landing page */
 .landing-page .btns {
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
     justify-content: space-around;
 }
-
+/* estilização dos nossos botões dentro da caixa na nossa landing page */
 .landing-page button,
 a {
     padding: 20px;
